Configurable Lodestar heap, Teku back down to 4g

--- a/default.env
+++ b/default.env
@@ -124,11 +124,13 @@ CL_EXTRAS=
 # Additional parameters for the validator client.
 VC_EXTRAS=
 
-# Heap for Besu and Teku, both written in Java. Sets JAVA_OPTS to this
-# value, for example TEKU_HEAP=-Xmx12g to set it to 12g. If left empty, the
-# defaults in besu.yml and teku.yml are used.
+# Heap for Besu and Teku, both written in Java. Sets JAVA_OPTS to this value, for example TEKU_HEAP=-Xmx12g to set it
+# to 12g. If left empty, the defaults in besu.yml and teku.yml are used.
 BESU_HEAP=
 TEKU_HEAP=
+# Heap for Lodestar. Sets NODE_OPTIONS to this value, for example --max-old-space-size=8192.
+# If left empty, the default in lodestar.yml will be used.
+LODESTAR_HEAP=
 
 # Set this to true to sync an archive node instead of pruned for both CL
 # and EL. Caution that this may a) require a fresh sync and b) will
