Default postgres tag pins version

--- a/default.env
+++ b/default.env
@@ -226,7 +226,7 @@ LS_DOCKERFILE=Dockerfile.binary
 # Web3Signer
 W3S_DOCKER_TAG=latest
 W3S_DOCKER_REPO=consensys/web3signer
-PG_DOCKER_TAG=alpine
+PG_DOCKER_TAG=15-alpine
 
 # Besu
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
