Add QUIC port to Lighthouse

--- a/default.env
+++ b/default.env
@@ -83,6 +83,7 @@ EL_P2P_PORT=30303
 CL_P2P_PORT=9000
 PRYSM_PORT=9000
 PRYSM_UDP_PORT=9000
+CL_QUIC_PORT=9001
 # Local grafana dashboard port. Do not expose to Internet, it is insecure http
 GRAFANA_PORT=3000
 # Local Siren UI port. Do not expose to Internet, it is insecure http
