Switch Prysm VC to REST

--- a/prysm-vc-only.yml
+++ b/prysm-vc-only.yml
@@ -53,8 +53,6 @@ services:
       - /var/lib/prysm/
       - --keymanager-token-file
       - /var/lib/prysm/auth-token
-      - --beacon-rpc-provider
-      - ${CL_NODE:-consensus:4000}
       - --verbosity
       - ${LOG_LEVEL}
       - --accept-terms-of-use
@@ -68,6 +66,9 @@ services:
       - --http-port
       - ${KEY_API_PORT:-7500}
       - --http-cors-domain=*
+      - --enable-beacon-rest-api
+      - --beacon-rest-api-provider
+      - ${CL_NODE:-http://consensus:5052}
       - --suggested-fee-recipient
       - ${FEE_RECIPIENT}
       - --wallet-password-file
