Add metrics scrape labels for central scrape

--- a/besu.yml
+++ b/besu.yml
@@ -100,6 +100,9 @@ services:
       - traefik.http.routers.${EE_HOST:-ee}.rule=Host(`${EE_HOST:-ee}.${DOMAIN}`)
       - traefik.http.routers.${EE_HOST:-ee}.tls.certresolver=letsencrypt
       - traefik.http.services.${EE_HOST:-ee}.loadbalancer.server.port=${EE_PORT:-8551}
+      - metrics.scrape=true
+      - metrics.path=/metrics
+      - metrics.port=6060
 volumes:
   besu-eth1-data:
   jwtsecret:
