--- a/lighthouse.yml
+++ b/lighthouse.yml
@@ -94,6 +94,9 @@ services:
       - traefik.http.routers.${CL_HOST:-cl}lb.rule=Host(`${CL_LB:-cl-lb}.${DOMAIN}`)
       - traefik.http.routers.${CL_HOST:-cl}lb.tls.certresolver=letsencrypt
       - traefik.http.services.${CL_HOST:-cl}.loadbalancer.server.port=${CL_REST_PORT:-5052}
+      - metrics.scrape=true
+      - metrics.path=/metrics
+      - metrics.port=8008
 
   validator:
     restart: "unless-stopped"
@@ -150,6 +153,9 @@ services:
       - traefik.http.routers.${VC_HOST:-vc}.rule=Host(`${VC_HOST:-vc}.${DOMAIN}`)
       - traefik.http.routers.${VC_HOST:-vc}.tls.certresolver=letsencrypt
       - traefik.http.services.${VC_HOST:-vc}.loadbalancer.server.port=${KEY_API_PORT:-7500}
+      - metrics.scrape=true
+      - metrics.path=/metrics
+      - metrics.port=8009
 
   validator-exit:
     profiles: ["tools"]
