--- a/lodestar.yml
+++ b/lodestar.yml
@@ -75,6 +75,10 @@ services:
       - ${LOG_LEVEL}
       - --suggestedFeeRecipient
       - ${FEE_RECIPIENT}
+    labels:
+      - metrics.scrape=true
+      - metrics.path=/metrics
+      - metrics.port=8008
 
   validator:
     restart: "unless-stopped"
@@ -128,6 +132,10 @@ services:
       - --suggestedFeeRecipient
       - ${FEE_RECIPIENT}
       - --force
+    labels:
+      - metrics.scrape=true
+      - metrics.path=/metrics
+      - metrics.port=8008
 
   validator-exit:
     profiles: ["tools"]
