env versioning prep; better error handling

--- a/default.env
+++ b/default.env
@@ -288,3 +288,6 @@ DDNS_TAG=3
 
 # For the Node Dashboard, define a regex of mount points to ignore for the diskspace check.
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
+
+# Used by ethd update - please do not adjust
+ENV_VERSION=1
