--- a/grafana.yml
+++ b/grafana.yml
@@ -13,12 +13,15 @@ services:
     build:
       context: ./prometheus
     image: prometheus:local
+    user: root
     volumes:
       - prom-data:/prometheus
       - /etc/localtime:/etc/localtime:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./prometheus/custom-prom.yml:/etc/prometheus/custom-prom.yml:ro
     environment:
       - CLIENT=${COMPOSE_FILE}
-    entrypoint: choose-config.sh
+    entrypoint: make-config.sh
     command:
       - /bin/prometheus
       - --storage.tsdb.path=/prometheus
@@ -26,6 +29,10 @@ services:
       - --web.console.libraries=/usr/share/prometheus/console_libraries
       - --web.console.templates=/usr/share/prometheus/consoles
     <<: *logging
+    labels:
+      - metrics.scrape=true
+      - metrics.path=/metrics
+      - metrics.port=9090
 
   ethereum-metrics-exporter:
     restart: "unless-stopped"
@@ -38,6 +45,10 @@ services:
       - docker-entrypoint.sh
       - /ethereum-metrics-exporter
     <<: *logging
+    labels:
+      - metrics.scrape=true
+      - metrics.path=/metrics
+      - metrics.port=9090
 
   node-exporter:
     image: prom/node-exporter:latest
@@ -57,6 +68,10 @@ services:
       - /sys:/host/sys:ro
       - /etc/localtime:/etc/localtime:ro
     <<: *logging
+    labels:
+      - metrics.scrape=true
+      - metrics.path=/metrics
+      - metrics.port=9100
 
   blackbox-exporter:
     restart: "unless-stopped"
@@ -64,9 +79,9 @@ services:
     volumes:
       - ./prometheus/blackbox.yml:/config/blackbox.yml
       - /etc/localtime:/etc/localtime:ro
-    <<: *logging
     command:
       - --config.file=/config/blackbox.yml
+    <<: *logging
 
   json-exporter:
     restart: "unless-stopped"
@@ -74,10 +89,14 @@ services:
     volumes:
       - ./prometheus/json.yml:/config/json.yml
       - /etc/localtime:/etc/localtime:ro
-    <<: *logging
     command:
       - --config.file
       - /config/json.yml
+    <<: *logging
+    labels:
+      - metrics.scrape=true
+      - metrics.path=/metrics
+      - metrics.port=7979
 
   cryptowat-exporter:
     restart: "unless-stopped"
@@ -90,6 +109,10 @@ services:
       - CRYPTOWAT_CACHESECONDS=300
       - TZ=Europe/Zurich
     <<: *logging
+    labels:
+      - metrics.scrape=true
+      - metrics.path=/metrics
+      - metrics.port=9745
 
   cadvisor:
     restart: "unless-stopped"
@@ -104,6 +127,10 @@ services:
       - --docker_only
       - --housekeeping_interval=30s
     <<: *logging
+    labels:
+      - metrics.scrape=true
+      - metrics.path=/metrics
+      - metrics.port=8080
 
   promtail:
     image: grafana/promtail:latest
@@ -121,6 +148,10 @@ services:
     depends_on:
       - loki
     <<: *logging
+    labels:
+      - metrics.scrape=true
+      - metrics.path=/metrics
+      - metrics.port=9080
 
   loki:
     image: grafana/loki:latest
@@ -131,6 +162,10 @@ services:
       - '--config.file=/etc/loki/loki.yml'
     restart: "unless-stopped"
     <<: *logging
+    labels:
+      - metrics.scrape=true
+      - metrics.path=/metrics
+      - metrics.port=3100
 
   grafana:
     restart: "unless-stopped"
@@ -155,6 +190,9 @@ services:
       - traefik.http.routers.grafana.rule=Host(`${GRAFANA_HOST}.${DOMAIN}`)
       - traefik.http.routers.grafana.tls.certresolver=letsencrypt
       - traefik.http.services.grafana.loadbalancer.server.port=${GRAFANA_PORT}
+      - metrics.scrape=true
+      - metrics.path=/metrics
+      - metrics.port=3000
 
 volumes:
   grafana-data:
