--- a/prometheus/Dockerfile
+++ b/prometheus/Dockerfile
@@ -1,16 +1,15 @@
 FROM prom/prometheus:latest
 
 COPY ./*-prom.yml /etc/prometheus/
-COPY ./global.yml /etc/prometheus
-COPY --chown=nobody:nobody ./choose-config.sh /usr/local/bin/choose-config.sh
+COPY ./rootless/*.yml /etc/prometheus/rootless/
+COPY --chown=nobody:nobody ./make-config.sh /usr/local/bin/
+COPY --chown=nobody:nobody ./rootless/choose-config.sh /usr/local/bin/
 # Belt and suspenders
 RUN chmod -R 755 /usr/local/bin/*
 USER root
 RUN chown nobody:nobody /etc/prometheus/*.yml
+RUN chown nobody:nobody /etc/prometheus/rootless/*.yml
 USER nobody
 
-# For reference and local testing with docker; this is otherwise set by docker-compose
-ENV CLIENT=lighthouse.yml
-
-ENTRYPOINT choose-config.sh
+ENTRYPOINT make-config.sh
 CMD ["/bin/prometheus", "--storage.tsdb.path=/prometheus", "--web.console.libraries=/usr/share/prometheus/console_libraries", "--web.console.templates=/usr/share/prometheus/consoles"]
