--- a/geth.yml
+++ b/geth.yml
@@ -38,6 +38,7 @@ services:
       default:
         aliases:
           - eth1
+          - ${NETWORK}-execution # This allows multiple Eth Docker stacks all connected to the same central traefik
     <<: *logging
     entrypoint:
       - docker-entrypoint.sh
