--- a/prometheus/custom-config.yml.sample
+++ b/prometheus/custom-config.yml.sample
@@ -1,5 +1,14 @@
+# Additional config for Prometheus
+
+global:
+  label_limit: 2000
+  scrape_interval: 10s
+
 remote_write:
   - url: "<Your Metrics instance remote_write endpoint>"
     basic_auth:
       username: "your Grafana Cloud username"
       password: "your Grafana Cloud API key"
+
+scrape_configs:
+  - job_name: Another job
