--- a/prometheus/Dockerfile
+++ b/prometheus/Dockerfile
@@ -1,23 +1,13 @@
-FROM mikefarah/yq:4.35.2@sha256:54e3310f27cb1776b2d2a8c66e4644fe5691a066c62583c82e6eadeb531a3c6c AS configbuilder
+ARG YQ_TAG=4.35.2@sha256:54e3310f27cb1776b2d2a8c66e4644fe5691a066c62583c82e6eadeb531a3c6c
+ARG YQ_REPO=mikefarah/yq
+FROM $YQ_REPO:$YQ_TAG AS yq
 
-# Client list to be provided by grafana-rootless.yml compose service
-ARG CLIENT=""
+FROM prom/prometheus:latest
 
-COPY --chown=yq:yq ./*-config.yml .
+COPY --from=yq /usr/bin/yq /usr/local/bin/yq
+
+COPY base-config.yml rootless-base-config.yml custom-prom.yml ./
 COPY ./rootless/*.yml ./rootless/
-COPY ./select-clients.sh .
+COPY ./docker-entrypoint.sh /
 
-# Merges base configs with custom config
-# The custom config overrides existing settings, and lists are extended
-RUN touch custom-config.yml && \
-    yq eval-all '. as $item ireduce ({}; . *+ $item)' base-config.yml custom-config.yml \
-    > /workdir/merged.yml
-
-RUN ./select-clients.sh && \
-    yq eval-all '. as $item ireduce ({}; . *+ $item)' rootless-with-clients.yml custom-config.yml \
-    > /workdir/merged-rootless.yml
-
-FROM prom/prometheus:latest AS runtime
-
-COPY --from=configbuilder /workdir/merged.yml /etc/prometheus/prometheus.yml
-COPY --from=configbuilder /workdir/merged-rootless.yml /etc/prometheus/rootless.yml
+ENTRYPOINT [ "/docker-entrypoint.sh" ]
