--- a/grafana.yml
+++ b/grafana.yml
@@ -14,6 +14,8 @@ services:
       context: ./prometheus
     image: prometheus:local
     user: root
+    environment:
+      - CONFIG_OVERRIDE=${PROM_CFG_OVERRIDE:-}
     volumes:
       - prom-data:/prometheus
       - /etc/localtime:/etc/localtime:ro
