--- a/prometheus/rootless-base-config.yml
+++ b/prometheus/rootless-base-config.yml
@@ -1,5 +1,15 @@
-# Prometheus config for rootless setups.
-# No access to the Docker socket - so scrapers must be included directly
+# This file is not intended to be modified - any changes here could be overwritten next time you update.
+# If you just need to add some new scrape targets to Prometheus, place these in the conf.d folder.
+# You can use the existing files as inspiration, and the docs are here:
+# https://prometheus.io/docs/prometheus/latest/configuration/configuration/
+#
+# If you need to override the settings in this file, or add other top-level configuration
+# (e.g.) remote_write config, please use custom-prom.yml.
+# The modifications in that file will supercede the settings here (or extend, in the case of lists)
+
+# This config differs from the regular one, as there is no access to the Docker socket itself
+# and the scrape configs get added manually
+
 global:
   scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
   scrape_timeout:      12s # Timeout must be shorter than the interval
@@ -10,7 +20,8 @@ scrape_config_files:
   - /etc/prometheus/conf.d/*.yml  # Mounted folder, place extra scraping configs in conf.d to include
   - /etc/prometheus/rootless.d/*.yml  # Populated when container starts based on .env settings
 
-# These targets are always present, so include directly here
+# These targets are present regardless of client choice, so they are listed here rather than
+# via one of the above configuration folders
 scrape_configs:
   - job_name: 'prometheus'
     scrape_interval: 5s
