Add v6 support to Lodestar

--- a/default.env
+++ b/default.env
@@ -27,7 +27,8 @@ DOPPELGANGER=false
 AUTOPRUNE_NM=true
 # Whether to use web3signer for validator keys. Setting this to "true" also requires web3signer.yml in COMPOSE_FILE
 WEB3SIGNER=false
-# Whether to explicitly enable IPv6 P2P. In use only for Lighthouse. See also v6-network.yml
+# Whether to explicitly enable IPv6 P2P. See https://ethdocker.com/Support/ipv6
+# Also add ipv6.yml to COMPOSE_FILE for IPv6.
 IPV6=false
 
 # Promtail logs label, something unique like the server name
@@ -290,4 +291,4 @@ DDNS_TAG=3
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=1
+ENV_VERSION=2
