Eth Docker version can be pinned

--- a/default.env
+++ b/default.env
@@ -163,6 +163,10 @@ MEV_NODE=http://mev-boost:18550
 # These settings are only migrated when running "./ethd update --keep-targets"
 # The default source build targets build from the latest github tag
 
+# Eth Docker updates its code to latest by default.
+# Set a github tag here to pin it to a version.
+ETH_DOCKER_TAG=
+
 # SSV
 SSV_NODE_TAG=latest
 
@@ -291,4 +295,4 @@ DDNS_TAG=3
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=2
+ENV_VERSION=3
