Document semver-ish versioning

--- a/default.env
+++ b/default.env
@@ -164,7 +164,7 @@ MEV_NODE=http://mev-boost:18550
 # The default source build targets build from the latest github tag
 
 # Eth Docker updates its code to latest by default.
-# Set a github tag here to pin it to a version.
+# Set a Github tag here to pin it to a version. Supported from v2.3.9.
 ETH_DOCKER_TAG=
 
 # SSV
