--- a/grafana-cloud.yml
+++ b/grafana-cloud.yml
@@ -1,6 +1,5 @@
-# Custom Prometheus rules. Use prometheus/custom-prom.yml which will be appended to
-# /etc/prometheus/prometheus.yml inside the prometheus container. It will be appended after
-# the last scrape target that the entrypoint script adds.
+# Custom Prometheus rules. Use prometheus/custom-prom.yml which will be merged intoto
+# /etc/prometheus/prometheus.yml inside the prometheus container.
 #
 # You could add additional scrape targets as well as additional global sections such as remote-write.
 # This file is called grafana-cloud.yml as adding a remote write to Grafana Cloud is likely a
@@ -28,10 +27,12 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./prometheus/custom-prom.yml:/etc/prometheus/custom-prom.yml:ro
-    environment:
-      - CLIENT=${COMPOSE_FILE}
-    entrypoint: make-config.sh
-    command: ["/bin/prometheus", "--storage.tsdb.path=/prometheus", "--web.console.libraries=/usr/share/prometheus/console_libraries", "--web.console.templates=/usr/share/prometheus/consoles"]
+      - ./prometheus/conf.d/:/etc/prometheus/conf.d/:ro
+    command:
+      - --storage.tsdb.path=/prometheus
+      - --storage.tsdb.retention.time=40d
+      - --web.console.libraries=/usr/share/prometheus/console_libraries
+      - --web.console.templates=/usr/share/prometheus/consoles
     <<: *logging
     labels:
       - metrics.scrape=true
@@ -101,22 +102,6 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=7979
-
-  cryptowat-exporter:
-    restart: "unless-stopped"
-    image: nbarrientos/cryptowat_exporter:latest
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - CRYPTOWAT_EXCHANGES=kraken
-      - CRYPTOWAT_PAIRS=etheur,ethusd,ethgbp,ethcad,ethchf,ethjpy,ethbtc
-      - CRYPTOWAT_CACHESECONDS=300
-      - TZ=Europe/Zurich
-    <<: *logging
-    labels:
-      - metrics.scrape=true
-      - metrics.path=/metrics
-      - metrics.port=9745
 
   cadvisor:
     restart: "unless-stopped"
