--- a/grafana-rootless.yml
+++ b/grafana-rootless.yml
@@ -17,16 +17,19 @@ services:
     volumes:
       - prom-data:/prometheus
       - /etc/localtime:/etc/localtime:ro
+      - ./prometheus/conf.d/:/etc/prometheus/conf.d/:ro
       - ./prometheus/custom-prom.yml:/etc/prometheus/custom-prom.yml:ro
     environment:
       - CLIENT=${COMPOSE_FILE}
-    entrypoint: choose-config.sh
-    command: ["/bin/prometheus", "--storage.tsdb.path=/prometheus", "--web.console.libraries=/usr/share/prometheus/console_libraries", "--web.console.templates=/usr/share/prometheus/consoles"]
+    command:
+      - --storage.tsdb.path=/prometheus
+      - --storage.tsdb.retention.time=40d
+      - --web.console.libraries=/usr/share/prometheus/console_libraries
+      - --web.console.templates=/usr/share/prometheus/consoles
     <<: *logging
     depends_on:
       - blackbox-exporter
       - json-exporter
-      - cryptowat-exporter
       - ethereum-metrics-exporter
 
   ethereum-metrics-exporter:
@@ -61,18 +64,6 @@ services:
     command:
       - --config.file
       - /config/json.yml
-
-  cryptowat-exporter:
-    restart: "unless-stopped"
-    image: nbarrientos/cryptowat_exporter
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - CRYPTOWAT_EXCHANGES=kraken
-      - CRYPTOWAT_PAIRS=ethusd,ethchf
-      - CRYPTOWAT_CACHESECONDS=300
-      - TZ=Europe/Zurich
-    <<: *logging
 
   grafana:
     restart: "unless-stopped"
