--- a/grafana.yml
+++ b/grafana.yml
@@ -18,12 +18,9 @@ services:
       - prom-data:/prometheus
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./prometheus/conf.d/:/etc/prometheus/conf.d/:ro
       - ./prometheus/custom-prom.yml:/etc/prometheus/custom-prom.yml:ro
-    environment:
-      - CLIENT=${COMPOSE_FILE}
-    entrypoint: make-config.sh
     command:
-      - /bin/prometheus
       - --storage.tsdb.path=/prometheus
       - --storage.tsdb.retention.time=40d
       - --web.console.libraries=/usr/share/prometheus/console_libraries
@@ -97,22 +94,6 @@ services:
       - metrics.scrape=true
       - metrics.path=/metrics
       - metrics.port=7979
-
-  cryptowat-exporter:
-    restart: "unless-stopped"
-    image: nbarrientos/cryptowat_exporter:latest
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - CRYPTOWAT_EXCHANGES=kraken
-      - CRYPTOWAT_PAIRS=etheur,ethusd,ethgbp,ethcad,ethchf,ethjpy,ethbtc
-      - CRYPTOWAT_CACHESECONDS=300
-      - TZ=Europe/Zurich
-    <<: *logging
-    labels:
-      - metrics.scrape=true
-      - metrics.path=/metrics
-      - metrics.port=9745
 
   cadvisor:
     restart: "unless-stopped"
