--- a/prometheus/custom-prom.yml.sample
+++ b/prometheus/custom-prom.yml.sample
@@ -1,5 +1,18 @@
+# Additional config for Prometheus. Modifications here will override the global settings, however
+# in the case of lists (e.g. scrape_configs) new items will be added.
+# This means that it's not possible to override existing scrape target configurations.
+
+global:
+  label_limit: 2000
+  scrape_interval: 10s
+  scrape_timeout: 8s
+  evaluation_interval: 10s
+
 remote_write:
   - url: "<Your Metrics instance remote_write endpoint>"
     basic_auth:
       username: "your Grafana Cloud username"
       password: "your Grafana Cloud API key"
+
+scrape_configs:
+  - job_name: Another job
